z-index bug fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,7 @@ section {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
     border-radius: 6px;
     overflow: hidden;
+    z-index: -1;
 }
 
 .country img {
